# very-simple-coding-agent

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
config/: default.toml
evals/: __init__.py  conftest.py
evals/cases/: __init__.py
evals/cases/live/: conftest.py  test_live_multi_step.py  test_live_read_file.py  test_live_write_file.py
evals/cases/scripted/: __init__.py  test_read_and_summarize.py  test_tool_sequencing.py  test_write_file.py
evals/framework/: __init__.py  executor.py  provider.py  runner.py  schema.py  scorers.py
src/agent/: __init__.py  config.py  loop.py  main.py  memory.py  models.py  repl.py
src/agent/providers/: __init__.py  base.py  ollama.py  openrouter.py
src/agent/tools/: __init__.py  execute_command.py  executor.py  list_directory.py  read_file.py  registry.py  search_files.py  think.py  write_file.py
tests/: test_config.py  test_loop.py  test_memory.py  test_models.py  test_repl.py
tests/test_providers/: test_ollama.py  test_openrouter.py
tests/test_tools/: test_execute_command.py  test_executor.py  test_list_directory.py  test_read_file.py  test_registry.py  test_search_files.py  test_think.py  test_write_file.py
