[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "very-simple-coding-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
agent = "agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
